--- a/result.html
+++ b/result.html
@@ -49,12 +49,10 @@
                     Diagnosis Result
                 </div>
                 <div class="diagnosis-text" id="diagnosisText">
-                    <p><strong>Diagnosis:</strong> {{ prediction }}</p>
+                    
                 </div>
                 <div class="diagnosis-description">
-                    Based on thousands of dermatologist-verified cases, our AI model has identified your uploaded skin
-                    condition image as <strong>{{ prediction }}</strong>. This result reflects high diagnostic
-                    confidence and alignment with medically trained data.
+                    
                 </div>
             </div>
 
@@ -63,7 +61,7 @@
                     <i class="fas fa-image card-icon"></i>
                     Analyzed Image
                 </div>
-                <img src="{{ image_url }}" alt="Uploaded Image" class="uploaded-image">
+                  <img src="" alt="Uploaded Image" class="uploaded-image" />
             </div>
         </div>
 
@@ -89,7 +87,7 @@
                     <i class="fas fa-fire card-icon"></i>
                     Model Focus (CAM Visualization)
                 </div>
-                    <img src="{{ heatmap_url }}" alt="Class Activation Map" class="uploaded-image">
+                    <img src="" alt="Class Activation Map" class="uploaded-image" />
 
             </div>
 
@@ -133,116 +131,138 @@
         </div>
     </div>
 
-    <script>
-        // Particle animation
-        function createParticle() {
-            const particle = document.createElement('div');
-            particle.className = 'particle';
-            particle.style.left = Math.random() * window.innerWidth + 'px';
-            particle.style.top = '-10px';
-            document.body.appendChild(particle);
-            setTimeout(() => particle.remove(), 3000);
-        }
-        setInterval(createParticle, 1000);
+  <script>
+    // Get values from localStorage
+    const prediction = localStorage.getItem("prediction") || "Unknown";
+    const alt1 = localStorage.getItem("alt_1") || "Alt 1";
+    const alt2 = localStorage.getItem("alt_2") || "Alt 2";
 
-        // Show chart after delay
-        setTimeout(() => {
-            const chartLoading = document.getElementById('chartLoading');
-            const chartCanvas = document.getElementById('confidenceChart');
-            chartLoading.style.display = 'none';
-            chartCanvas.style.display = 'block';
+    // Particle animation
+    function createParticle() {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * window.innerWidth + 'px';
+        particle.style.top = '-10px';
+        document.body.appendChild(particle);
+        setTimeout(() => particle.remove(), 3000);
+    }
+    setInterval(createParticle, 1000);
 
-            const ctx = chartCanvas.getContext('2d');
-            new Chart(ctx, {
-                type: 'doughnut',
-                data: {
-                    labels: ['{{ prediction }}', '{{ alt_1 }}', '{{ alt_2 }}'],
-                    datasets: [{
-                        data: [85, 10, 5],
-                        backgroundColor: ['#4CAF50', '#FF9800', '#9E9E9E'],
-                        borderColor: '#fff',
-                        borderWidth: 3,
-                        hoverOffset: 10
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    plugins: {
-                        legend: {
-                            position: 'bottom',
-                            labels: {
-                                padding: 20,
-                                font: {
-                                    size: 14,
-                                    weight: 'bold'
-                                }
+    // Show chart after delay
+    setTimeout(() => {
+        const chartLoading = document.getElementById('chartLoading');
+        const chartCanvas = document.getElementById('confidenceChart');
+        chartLoading.style.display = 'none';
+        chartCanvas.style.display = 'block';
+
+        const ctx = chartCanvas.getContext('2d');
+        new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+                labels: [prediction, alt1, alt2],
+                datasets: [{
+                    data: [85, 10, 5],
+                    backgroundColor: ['#4CAF50', '#FF9800', '#9E9E9E'],
+                    borderColor: '#fff',
+                    borderWidth: 3,
+                    hoverOffset: 10
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                        position: 'bottom',
+                        labels: {
+                            padding: 20,
+                            font: {
+                                size: 14,
+                                weight: 'bold'
                             }
                         }
-                    },
-                    animation: {
-                        animateRotate: true,
-                        animateScale: true,
-                        duration: 2000,
-                        easing: 'easeOutBounce'
                     }
+                },
+                animation: {
+                    animateRotate: true,
+                    animateScale: true,
+                    duration: 2000,
+                    easing: 'easeOutBounce'
                 }
-            });
-        }, 9000);
-
-        // Glow effect
-        setTimeout(() => {
-            const diagnosisText = document.querySelector('.diagnosis-text');
-            if (diagnosisText) {
-                diagnosisText.style.textShadow = '0 0 20px rgba(76, 175, 80, 0.8)';
-                setTimeout(() => diagnosisText.style.textShadow = 'none', 1000);
             }
-        }, 5000);
-
-        // Scroll animation
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.animation = 'fadeInUp 0.8s ease-out forwards';
-                }
-            });
-        }, { threshold: 0.1, rootMargin: '0px 0px -50px 0px' });
-
-        document.addEventListener('DOMContentLoaded', () => {
-            document.querySelectorAll('.summary-card, .chart-section').forEach(el => observer.observe(el));
         });
+    }, 9000);
 
-        // Ripple effect
-        document.querySelector('.try-again-btn').addEventListener('click', function (e) {
-            const ripple = document.createElement('div');
-            const rect = this.getBoundingClientRect();
-            const size = Math.max(rect.width, rect.height);
-            const x = e.clientX - rect.left - size / 2;
-            const y = e.clientY - rect.top - size / 2;
+    // Glow effect
+    setTimeout(() => {
+        const diagnosisText = document.querySelector('.diagnosis-text');
+        if (diagnosisText) {
+            diagnosisText.style.textShadow = '0 0 20px rgba(76, 175, 80, 0.8)';
+            setTimeout(() => diagnosisText.style.textShadow = 'none', 1000);
+        }
+    }, 5000);
 
-            ripple.style.width = ripple.style.height = size + 'px';
-            ripple.style.left = x + 'px';
-            ripple.style.top = y + 'px';
-            ripple.style.position = 'absolute';
-            ripple.style.background = 'rgba(255, 255, 255, 0.6)';
-            ripple.style.borderRadius = '50%';
-            ripple.style.pointerEvents = 'none';
-            ripple.style.animation = 'ripple 0.6s ease-out';
-
-            this.appendChild(ripple);
-            setTimeout(() => ripple.remove(), 600);
-        });
-
-        // Ripple keyframes
-        const style = document.createElement('style');
-        style.textContent = `
-            @keyframes ripple {
-                0% { transform: scale(0); opacity: 1; }
-                100% { transform: scale(4); opacity: 0; }
+    // Scroll animation
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.style.animation = 'fadeInUp 0.8s ease-out forwards';
             }
-        `;
-        document.head.appendChild(style);
-    </script>
+        });
+    }, { threshold: 0.1, rootMargin: '0px 0px -50px 0px' });
+
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('.summary-card, .chart-section').forEach(el => observer.observe(el));
+
+        // Also dynamically update diagnosis and images
+        document.getElementById("diagnosisText").innerHTML = `<p><strong>Diagnosis:</strong> ${prediction}</p>`;
+        document.querySelector(".diagnosis-description").innerHTML =
+            `Based on thousands of dermatologist-verified cases, our AI model has identified your uploaded skin condition image as <strong>${prediction}</strong>. This result reflects high diagnostic confidence and alignment with medically trained data.`;
+
+        const uploadedImage = document.querySelector("img.uploaded-image");
+        if (uploadedImage) {
+            uploadedImage.src = localStorage.getItem("image_url") || "";
+        }
+
+        const heatmapImage = document.querySelector('img[alt="Class Activation Map"]');
+        if (heatmapImage) {
+            heatmapImage.src = localStorage.getItem("heatmap_url") || "";
+        }
+    });
+
+    // Ripple effect
+    document.querySelector('.try-again-btn').addEventListener('click', function (e) {
+        const ripple = document.createElement('div');
+        const rect = this.getBoundingClientRect();
+        const size = Math.max(rect.width, rect.height);
+        const x = e.clientX - rect.left - size / 2;
+        const y = e.clientY - rect.top - size / 2;
+
+        ripple.style.width = ripple.style.height = size + 'px';
+        ripple.style.left = x + 'px';
+        ripple.style.top = y + 'px';
+        ripple.style.position = 'absolute';
+        ripple.style.background = 'rgba(255, 255, 255, 0.6)';
+        ripple.style.borderRadius = '50%';
+        ripple.style.pointerEvents = 'none';
+        ripple.style.animation = 'ripple 0.6s ease-out';
+
+        this.appendChild(ripple);
+        setTimeout(() => ripple.remove(), 600);
+    });
+
+    // Ripple keyframes
+    const style = document.createElement('style');
+    style.textContent = `
+        @keyframes ripple {
+            0% { transform: scale(0); opacity: 1; }
+            100% { transform: scale(4); opacity: 0; }
+        }
+    `;
+    document.head.appendChild(style);
+</script>
+
+   
 </body>
 
 </html>
